# Moss-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Moss Engine.aps  Moss Engine.code-workspace  Moss Engine.sln  Moss Engine.vcxproj  Moss Engine.vcxproj.filters  README.md  SDL Game.sublime-project  SDL Game.sublime-workspace  Shooting The Moon.sublime-project  Shooting The Moon.sublime-workspace  callbackmanager.cpp  resource.h  where the body was hidden.txt
Moss Engine/x64/Release/: Moss Engine.exe.recipe  Moss Engine.iobj
Moss Engine/x64/Release/Moss Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Moss Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/levels/: OLD.lvl  bb.lvl  bruh.lvl  f.lvl  fuck.lvl  johnmadden.lvl  level - Copy.lvl  level.lvl  level1.lvl  level3.lvl  level3d.lvl  s.lvl  test.lvl  texturetest.lvl
assets/models/: icosphere.glb  monkey.glb
assets/scripts/: camera.lua  example.lua
assets/shaders/: 3Dshader.vert  3Dshader.vs  compile.bat  default_frag.glsl  default_frag.spv  default_vert.glsl  default_vert.spv  dropshadow.frag  dropshadow.vert  framebuffer.frag  framebuffer.fs  framebuffer.vert  framebuffer.vs  gradient_comp.glsl  lightshader.frag  lightshader.fs  lightshader.vert  lightshader.vs  luminosity.frag  luminosity.fs  luminosity.vert  luminosity.vs  shader.frag  shader.fs  shader.vert  shader.vs  shader_vert.glsl  shadowshader.frag  shadowshader.fs  shadowshader.vert  shadowshader.vs
assets/shaders/opengl/: default_frag.glsl  default_vert.glsl
assets/textures/: wip character.ase
include/: camera.hpp  config.hpp  console.hpp  editorscene.hpp  enemy.hpp  entity.hpp  event.hpp  gamescene.hpp  global.hpp  globals.hpp  init.hpp  level.hpp  light.hpp  livingentity.hpp  math.hpp  mesh.hpp  moss_camera.hpp  moss_engine.hpp  moss_entity.hpp  moss_event.hpp  moss_mesh.hpp  moss_mesh_instance.hpp  moss_renderer.hpp  moss_script.hpp  moss_tick.hpp  moss_types.hpp  moss_util.hpp  moss_utility.hpp  network.hpp  networking.hpp  networkmanager.hpp  networkplayer.hpp  openglwindow.hpp  physicsentity.hpp  player.h  player.hpp  renderer.hpp  renderwindow.hpp  scene.hpp  shader.hpp  (+10 more)
source/: event.cpp  main.cpp  mesh.cpp  moss_engine.cpp  moss_entity.cpp  moss_event.cpp  moss_mesh.cpp  moss_script.cpp  moss_tick.cpp  opengl_renderer.cpp  tick.cpp  vulkan_renderer.cpp  window.cpp
src/: console.cpp  editorscene.cpp  enemy.cpp  entity.cpp  event.cpp  gamescene.cpp  level.cpp  light.cpp  livingentity.cpp  main.cpp  math.cpp  network.cpp  networking.cpp  networkmanager.cpp  networkplayer.cpp  openglwindow.cpp  physicsentity.cpp  player.cpp  renderwindow.cpp  scene.cpp  splashscreenscene.cpp  steamcallbacks.cpp  text.cpp  ui.cpp  vulkanwindow.cpp
